# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  README.md  cleanup.fish  dot_ExifTool_config  dot_clang-format  dot_condarc.tmpl  dot_gdbinit  dot_gitconfig.tmpl  dot_profile.tmpl  dot_tmux.conf  dot_tmux.conf.tmpl  dot_xprofile  port_config.sh  private_dot_gitignore  run_once_install-packages.sh
dot_claude/: private_CLAUDE.md  private_settings.json  settings.json
dot_claude/mcp-servers/serial-mcp-server/: Cargo.toml  LICENSE  README.md  README_ZH.md
dot_claude/mcp-servers/serial-mcp-server/dot_git/: config  index  packed-refs
dot_claude/mcp-servers/serial-mcp-server/dot_git/logs/: HEAD
dot_claude/mcp-servers/serial-mcp-server/dot_git/objects/pack/: readonly_pack-b05d7f8176a5be4b924c84535e977d984e3e6a2d.idx  readonly_pack-b05d7f8176a5be4b924c84535e977d984e3e6a2d.pack  readonly_pack-b05d7f8176a5be4b924c84535e977d984e3e6a2d.rev
dot_claude/mcp-servers/serial-mcp-server/dot_git/refs/heads/: main
dot_claude/mcp-servers/serial-mcp-server/src/: lib.rs  main.rs
dot_scls/: external-snippets.toml
dot_tmux/: tmux.remote.conf
migration_nixos/: README.md  arch_install_script.sh  chezmoi.toml  post_install.sh
private_dot_config/: dprint.json  starship.toml
private_dot_ssh/: cls.pub  config  duplicacy.pub.tmpl  encrypted_default.pub.asc  encrypted_private_cls.asc  encrypted_private_default.asc  encrypted_private_executable_id_rsa.asc  private_authorized_keys.tmpl  private_config  private_config.tmpl  private_duplicacy.tmpl  private_executable_config.tmpl  tyrex.pub.tmpl  (+4 more)
(+297 files in other folders)
